--- a/Projetando.html
+++ b/Projetando.html
@@ -94,7 +94,7 @@
         <h1>Cena Geek</h1>
         <h2>Voltado ao público Geek</h2>
         <hr>
-        <p>Site voltado à facilitação de contato e contratação de editores, thumbmakers, reacts, desenhistas, beatmakers, entre outras várias profissões.</p>
+        <p>Site voltado à facilitação de contato e contratação de pessoas envolvidas no cenario geek, etc..</p>
         <br>
         <img src="Geek.png" alt="Geek cenas" width="700" height="500">
 
