--- a/Projetando.html
+++ b/Projetando.html
@@ -127,7 +127,7 @@
                 <tr> 
                     <td>Usuário</td> 
                     <td>    
-                        <input type="text" name="nome" maxlength="12"><br>
+                        <input autofocus type="text" name="nome" maxlength="12"><br>
                     </td> 
                 </tr>
                 <tr> 
@@ -156,7 +156,7 @@
                     <td>Perfil</td>
                     <td>
                         <select>
-                            <option>Padrão</option>
+                            <option>Visitante</option>
                             <option>Artista</option>
                             <option>Administrador</option>
                         </select>
